sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:4: error: not found: value getNombreValeur
while (pos!=getNombreValeur-1)
            ^AlgGnomeSort:7: error: not found: value getNombreValeur
	} else if (pos==getNombreValeur-1) {
                        ^