sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
var pos:Int=0
while (pos!=getNombreValeur-1)
	if (pos==0) {
		pos=pos+1
	} else if (pos==getNombreValeur-1) {
		return
	} else if(getValeur(pos)<getValeur(pos-1)) {
		echange(pos,pos-1)
		pos=pos-1
	} else {
		pos=pos+1
	}
}
